// Auto-generated by Trenza DSL Compiler
// Compiler Profile: pro

#[derive(Debug, Clone, Copy, PartialEq)]
pub enum Contexto {
    ModoNormal,
    ModoAlerta,
    ModoFuego,
    ModoAgua,
}

pub struct System {
    pub state: Contexto,
}

impl System {
    pub fn new(initial: Contexto) -> Self {
        Self { state: initial }
    }

    pub fn handle_event(&mut self, event: &str) {
        match self.state {
            Contexto::ModoNormal => {
                match event {
                    "alert" => self.state = Contexto::ModoAlerta,
                    "activateFuego" => self.state = Contexto::ModoFuego,
                    "activateAgua" => self.state = Contexto::ModoAgua,
                    _ => {},
                }
            },
            Contexto::ModoAlerta => {
                match event {
                    "normal" => self.state = Contexto::ModoNormal,
                    _ => {},
                }
            },
            Contexto::ModoFuego => {
                match event {
                    "deactivate" => self.state = Contexto::[stay],
                    _ => {},
                }
            },
            Contexto::ModoAgua => {
                match event {
                    "deactivate" => self.state = Contexto::[stay],
                    _ => {},
                }
            },
        }
    }
}

pub fn handle_agua_trigger(ctx: &Contexto) {
    match ctx {
        Contexto::ModoNormal => {
            // ignored
        },
        Contexto::ModoAlerta => {
            // ignored
        },
        Contexto::ModoFuego => {
            // ignored
        },
        Contexto::ModoAgua => {
            // execute accionFrio
        },
    }
}

pub fn handle_fuego_trigger(ctx: &Contexto) {
    match ctx {
        Contexto::ModoNormal => {
            // ignored
        },
        Contexto::ModoAlerta => {
            // ignored
        },
        Contexto::ModoFuego => {
            // execute accionCalor
        },
        Contexto::ModoAgua => {
            // ignored
        },
    }
}

#[cfg(test)]
mod tests {
    use super::*;

    #[test]
    fn test_transition_ModoNormal_on_alert() {
        let mut sys = System::new(Contexto::ModoNormal);
        sys.handle_event("alert");
        assert_eq!(sys.state, Contexto::ModoAlerta);
    }

    #[test]
    fn test_transition_ModoNormal_on_activateFuego() {
        let mut sys = System::new(Contexto::ModoNormal);
        sys.handle_event("activateFuego");
        assert_eq!(sys.state, Contexto::ModoFuego);
    }

    #[test]
    fn test_transition_ModoNormal_on_activateAgua() {
        let mut sys = System::new(Contexto::ModoNormal);
        sys.handle_event("activateAgua");
        assert_eq!(sys.state, Contexto::ModoAgua);
    }

    #[test]
    fn test_transition_ModoAlerta_on_normal() {
        let mut sys = System::new(Contexto::ModoAlerta);
        sys.handle_event("normal");
        assert_eq!(sys.state, Contexto::ModoNormal);
    }

    #[test]
    fn test_transition_ModoFuego_on_deactivate() {
        let mut sys = System::new(Contexto::ModoFuego);
        sys.handle_event("deactivate");
        assert_eq!(sys.state, Contexto::[stay]);
    }

    #[test]
    fn test_transition_ModoAgua_on_deactivate() {
        let mut sys = System::new(Contexto::ModoAgua);
        sys.handle_event("deactivate");
        assert_eq!(sys.state, Contexto::[stay]);
    }

}
